Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18779

lnetctl SIGSEGV in lnetctl.c getopt_internal()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      Program received signal SIGSEGV, Segmentation fault. 0x0000fffff7d55b04 in _getopt_internal_r () from /lib64/libc.so.6 #0  0x0000fffff7d55b04 in _getopt_internal_r () from /lib64/libc.so.6

      #1  0x0000fffff7d56094 in _getopt_internal () from /lib64/libc.so.6

      #2  0x00000000004291b0 in jt_show_net (argc=2, argv=0xffffffffdd28) at lnetctl.c:3717

      #3  0x0000fffff7f87524 in cfs_parser_execarg (cmds=<optimized out>, argv=0xffffffffdd28, argc=2) at util/parser.c:174

      #4  cfs_parser (argc=<optimized out>, argv=<optimized out>, cmds=<optimized out>) at util/parser.c:157

      #5  0x000000000042bb28 in jt_net (argc=3, argv=0xffffffffdd20) at lnetctl.c:3977

      #6  0x0000fffff7f870d8 in execute_line (line=<optimized out>) at util/parser.c:370

      #7  0x0000fffff7f876e0 in cfs_parser_commands (cmds=<optimized out>) at util/parser.c:483

      #8  cfs_parser (argc=<optimized out>, argv=<optimized out>, cmds=<optimized out>) at util/parser.c:159

      #9  0x0000000000443630 in main (argc=1, argv=0xffffffffef48) at lnetctl.c:5925

      Attachments

        Activity

          People

            fsehr Frank Sehr (Inactive)
            fsehr Frank Sehr (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: